# YouBot_sim

./: CMakeLists.txt  README.md  main.cpp  start.sh  you_bot_scene.ttt
libs/help_lib/: print_lib.h  terminal_colors.h
libs/math_lib/: constrain.h
libs/sim_lib/: simConfig.h
libs/types_lib/: axis.h  odometry.h  pose.h  velocity.h
libs/you_bot_lib/: you_bot.h  you_bot_sim_config.h
libs/you_bot_lib/platform/: platform.cpp  platform.h
libs/you_bot_lib/platform/actuator/: actuator.cpp  actuator.h
